Fixed tagline cutoff by adding new text size between 3xl and 4xl

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2109,10 +2109,6 @@ body {
   min-width: 10rem;
 }
 
-.min-w-0{
-  min-width: 0px;
-}
-
 .max-w-2xl{
   max-width: 42rem;
 }
@@ -2847,10 +2843,6 @@ body {
 
 .pt-8{
   padding-top: 2rem;
-}
-
-.pr-2{
-  padding-right: 0.5rem;
 }
 
 .text-left{
@@ -4217,20 +4209,12 @@ section[id] {
     height: 20rem;
   }
 
-  .md\:h-72{
-    height: 18rem;
-  }
-
   .md\:w-1\/2{
     width: 50%;
   }
 
   .md\:w-80{
     width: 20rem;
-  }
-
-  .md\:w-72{
-    width: 18rem;
   }
 
   .md\:grid-cols-2{
@@ -4291,6 +4275,10 @@ section[id] {
     text-align: right;
   }
 
+  .md\:text-3\.5xl{
+    font-size: 2.1rem;
+  }
+
   .md\:text-3xl{
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -4309,11 +4297,6 @@ section[id] {
   .md\:text-xl{
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .md\:text-2xl{
-    font-size: 1.5rem;
-    line-height: 2rem;
   }
 }
 
@@ -4341,18 +4324,6 @@ section[id] {
 
   .lg\:w-96{
     width: 24rem;
-  }
-
-  .lg\:w-1\/3{
-    width: 33.333333%;
-  }
-
-  .lg\:w-2\/3{
-    width: 66.666667%;
-  }
-
-  .lg\:flex-grow{
-    flex-grow: 1;
   }
 
   .lg\:grid-cols-3{
@@ -4407,6 +4378,11 @@ section[id] {
 @media (min-width: 1280px){
   .xl\:grid-cols-4{
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .xl\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
 
